[gd_scene load_steps=11 format=3 uid="uid://ce2htbfuhm53s"]

[ext_resource type="Script" path="res://src/scripts/crop.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://smir6hjyr4dm" path="res://src/sprites/cropSet2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bkturqv37pgy5" path="res://src/sprites/particleSprite.png" id="3"]
[ext_resource type="Theme" uid="uid://dbioa4r6m2qaq" path="res://src/themes/but.tres" id="4"]

[sub_resource type="Curve" id="Curve_bmx3w"]
max_value = 0.05
_data = [Vector2(0.5, 0), 0.0, 0.0, 0, 0, Vector2(0.75, 0.05), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.267521, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_1ougw"]
curve = SubResource("Curve_bmx3w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fkxnv"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 75.0
initial_velocity_max = 80.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 20.0
damping_max = 25.0
scale_curve = SubResource("CurveTexture_1ougw")

[sub_resource type="Animation" id="4"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("cropSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, -0.261799, 0.0]
}

[sub_resource type="Animation" id="5"]
resource_name = "done"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cropSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 5.0, 0.0, -5.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bm7p"]
_data = {
"RESET": SubResource("4"),
"done": SubResource("5")
}

[node name="crop" type="Node2D" groups=["crop", "cropBox"]]
script = ExtResource("1")

[node name="cropSprite" type="Sprite2D" parent="."]
texture = ExtResource("2")
hframes = 4
vframes = 3

[node name="growthParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_fkxnv")
texture = ExtResource("3")
lifetime = 2.5
one_shot = true
preprocess = 1.25
explosiveness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7bm7p")
}

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4")

[connection signal="button_up" from="Button" to="." method="butSold"]
